SF Primes/src/objects/NADA_Link_Criteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Field__c</fullName>
        <label>Contact Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modifier__c</fullName>
        <inlineHelpText>A regular expression modifier that will be applied to the NADA Swipe field contents before it is queried. A blank value in this field will not modify either field before comparison.</inlineHelpText>
        <label>Regex Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <inlineHelpText>A regular expression replacement that is applied to the NADA Swipe field contents before it is queried. This field requires the Modifier field to be set. If the Modifier field is not set, this field is ignored.</inlineHelpText>
        <label>Regex Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swipe_Field__c</fullName>
        <label>Swipe Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NADA Link Criteria</label>
</CustomObject>